--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "livewire/livewire": "*",
+        "laravelcollective/html": "^6.4",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-permission": "^6.1",
-        "twilio/sdk": "^7.12"
+        "spatie/laravel-permission": "^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
